--- a/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
+++ b/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
@@ -746,6 +746,17 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="Pzx-zY-eBL">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dQs-Cd-17T">
+                                <rect key="frame" x="5" y="20" width="45" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="45" id="9SO-3A-Ut7"/>
+                                    <constraint firstAttribute="height" constant="45" id="vbL-gX-Sj0"/>
+                                </constraints>
+                                <state key="normal" image="icon_close"/>
+                                <connections>
+                                    <action selector="tappedDismiss:" destination="Ecd-9d-43U" eventType="touchUpInside" id="b3G-Df-hbh"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DFT-za-rvD">
                                 <rect key="frame" x="85" y="50" width="150" height="150"/>
                                 <constraints>
@@ -872,7 +883,9 @@
                             <constraint firstItem="PUZ-2e-T8x" firstAttribute="leading" secondItem="TgM-5L-4HZ" secondAttribute="trailing" constant="5" id="bcu-HC-req"/>
                             <constraint firstItem="ati-ze-FEJ" firstAttribute="top" secondItem="cJr-x2-GNG" secondAttribute="bottom" id="dHq-oz-YSI"/>
                             <constraint firstItem="DFT-za-rvD" firstAttribute="centerX" secondItem="IJI-WL-4fQ" secondAttribute="centerX" id="gOY-Sq-pmc"/>
+                            <constraint firstItem="dQs-Cd-17T" firstAttribute="top" secondItem="IJI-WL-4fQ" secondAttribute="top" constant="20" id="jyN-lw-gW5"/>
                             <constraint firstItem="Pzx-zY-eBL" firstAttribute="leading" secondItem="IJI-WL-4fQ" secondAttribute="leading" id="jyO-kU-uyP"/>
+                            <constraint firstItem="dQs-Cd-17T" firstAttribute="leading" secondItem="IJI-WL-4fQ" secondAttribute="leading" constant="5" id="nam-tB-IYl"/>
                             <constraint firstItem="HGF-S6-0bL" firstAttribute="centerX" secondItem="IJI-WL-4fQ" secondAttribute="centerX" id="qbk-y2-yod"/>
                             <constraint firstItem="cJr-x2-GNG" firstAttribute="width" secondItem="HGF-S6-0bL" secondAttribute="width" id="r4b-9E-O3O"/>
                             <constraint firstItem="mPf-sh-far" firstAttribute="leading" secondItem="TgM-5L-4HZ" secondAttribute="leading" id="ryN-zi-KiT"/>
