--- a/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
+++ b/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
@@ -1247,13 +1247,16 @@
                                     <action selector="tappedNormalMapType:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CLK-f2-CnS"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U9X-ff-LcF">
-                                <rect key="frame" x="135" y="513" width="50" height="50"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U9X-ff-LcF">
+                                <rect key="frame" x="135" y="498" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Gwq-RG-iWJ"/>
                                     <constraint firstAttribute="width" constant="50" id="hCg-pq-d2F"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" image="contacts"/>
+                                <connections>
+                                    <action selector="tappedShowContactList:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ARf-Gk-mXX"/>
+                                </connections>
                             </button>
                         </subviews>
                         <constraints>
@@ -1276,7 +1279,7 @@
                             <constraint firstItem="IGi-cb-GhH" firstAttribute="leading" secondItem="EN0-G1-lHx" secondAttribute="leading" id="u7D-dH-NeL"/>
                             <constraint firstAttribute="trailing" secondItem="I2Y-ue-wS3" secondAttribute="trailing" id="uF8-BK-5Tx"/>
                             <constraint firstAttribute="trailing" secondItem="W9Q-Ev-QUF" secondAttribute="trailing" id="vs6-dq-KyR"/>
-                            <constraint firstAttribute="bottom" secondItem="U9X-ff-LcF" secondAttribute="bottom" constant="5" id="w5Q-Uo-toh"/>
+                            <constraint firstAttribute="bottom" secondItem="U9X-ff-LcF" secondAttribute="bottom" constant="20" id="w5Q-Uo-toh"/>
                             <constraint firstItem="EN0-G1-lHx" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="15" id="zyL-xI-wdq"/>
                         </constraints>
                     </view>
@@ -1788,6 +1791,7 @@ AAAAAAAAAAAAAAAAD1w
         </image>
         <image name="check_off" width="22" height="22"/>
         <image name="check_on" width="22" height="22"/>
+        <image name="contacts" width="50" height="50"/>
         <image name="done" width="35" height="35"/>
         <image name="hidePassword" width="32" height="32"/>
         <image name="hybrid" width="40" height="40"/>
